NavBar to all remaining Pages

--- a/pages/myHobbies.html
+++ b/pages/myHobbies.html
@@ -1,17 +1,77 @@
 <html>
-    <body>
 
-        <p>Check out my top 100 songs of 2018!</p>
-        <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1EjvSUkHw09NgY" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- jQuery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="index.js" charset="utf-8"></script>
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-        
-    </body>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/index.css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Scada:400i" rel="stylesheet">
+
+  <!-- Font Awesome -->
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+  <!-- Bootstrap CSS -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <!-- Navigation -->
+
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
+    <!-- Just an image -->
+    <nav class="navbar navbar-dark bg-warning">
+      <a class="navbar-brand" href="../index.html">
+        <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
+        <picture>
+          <source media="(min-width: 900px)" srcset="../images/logo.png">
+          <source media="(min-width: 100px)" srcset="../images/logoM.png">
+          <img src="../images/logo.png" alt="Logo">
+        </picture>
+      </a>
+    </nav>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav float-right">
+        <li class="nav-item active">
+          <a class="nav-link" href="aboutMe.html">About Me</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="myHobbies.html">My Hobbies</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="myPictures.html">My Pictures</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="myResume.html">My Résumé</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="contactMe.html">Contact Me</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+</head>
+
+<body>
+
+  <p>Check out my top 100 songs of 2018!</p>
+  <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1EjvSUkHw09NgY" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="index.js" charset="utf-8"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+</body>
 <html>
