--- a/pages/myPictures.html
+++ b/pages/myPictures.html
@@ -14,6 +14,54 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link rel="stylesheet" href="../css/myPictures.css">
 
+    !-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Scada:400i" rel="stylesheet">
+
+    <!-- Font Awesome -->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!-- Navigation -->
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
+      <!-- Just an image -->
+      <nav class="navbar navbar-dark bg-warning">
+        <a class="navbar-brand" href="../index.html">
+          <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
+          <picture>
+            <source media="(min-width: 900px)" srcset="../images/logo.png">
+            <source media="(min-width: 100px)" srcset="../images/logoM.png">
+            <img src="../images/logo.png" alt="Logo">
+          </picture>
+        </a>
+      </nav>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav float-right">
+          <li class="nav-item active">
+            <a class="nav-link" href="aboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="myHobbies.html">My Hobbies</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="myPictures.html">My Pictures</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="myResume.html">My Résumé</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contactMe.html">Contact Me</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
 </head>
 <body>
