--- a/pages/myResume.html
+++ b/pages/myResume.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/index.css">
 
-<link rel="stylesheet" href="../css/index.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Scada:400i" rel="stylesheet">
 
-<!-- Navigation -->
-<link rel="stylesheet" href="css/bootstrap.css">
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
-  <!-- Just an image -->
-  <nav class="navbar navbar-dark bg-warning">
-    <a class="navbar-brand" href="../index.html">
-      <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
-    <picture>
-      <source media="(min-width: 900px)" srcset="../images/logo.png">
-      <source media="(min-width: 200px)" srcset="../images/logoM.png">
-      <img src="images/logo.png" alt="Logo">
-    </picture>
-    </a>
+  <!-- Font Awesome -->
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+  <!-- Bootstrap CSS -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <!-- Navigation -->
+
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-warning">
+    <!-- Just an image -->
+    <nav class="navbar navbar-dark bg-warning">
+      <a class="navbar-brand" href="../index.html">
+        <!-- <img src="images/logo.png" width="413" height="30", alt="Logo"> -->
+        <picture>
+          <source media="(min-width: 900px)" srcset="../images/logo.png">
+          <source media="(min-width: 100px)" srcset="../images/logoM.png">
+          <img src="../images/logo.png" alt="Logo">
+        </picture>
+      </a>
+    </nav>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav float-right">
+        <li class="nav-item active">
+          <a class="nav-link" href="aboutMe.html">About Me</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="myHobbies.html">My Hobbies</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="myPictures.html">My Pictures</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="myResume.html">My Résumé</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="contactMe.html">Contact Me</a>
+        </li>
+      </ul>
+    </div>
   </nav>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="aboutMe.html">About Me</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="myMusic.html">My Hobbies</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="myPictures.html">My Pictures</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="myResume.html">My Résumé</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="contactMe.html">Contact Me</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+</head>
 
 <body>
   <div class="download-buttons">
