About Me addition

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -59,15 +59,49 @@
 
 </head>
 
-    <h2>About Me</h2>
+<body>
+  <div class= "container row">
+  <div class= "col-md-7">
+  <h2>About Me</h2>
+  <p>
+    The only way that I could think to structure this piece is in the way of an awkward introduction at a party, so here we go: </p>
+  <p>
+    Nice to meet you, my name is Micah. I currently work in an Internet Technical Support position at Charter Communications. It’s the second largest cable company in the country and services people in almost all areas of the US. The job is
+    enjoyable because I have the opportunity to help all kinds of people with a myriad of different issues. One minute, it’s a mother who needs the SpectrumTV app to work for her restless kids; the next could be network optimization for a stay at
+    home employee.
+  </p>
+  <p>
+    I am originally from Erie, Pennsylvania and go back at least once a year to see family, so I still have a strong connection to the Erie area. I have lived in Colorado for the past 14 years and have very much enjoyed my time here. Its so hard to
+    beat the scenery, dry air, and sunshine.
+  </p>
+  <p>
+    (Hour long sports discussion omitted)
+  </p>
+  <p>
+    I started college at Pikes Peak Community College right out of high school not really knowing exactly what I wanted to do, so I took required classes. My love of technology was solidified when I took a C++ coding class at PPCC. From there I
+    decided to get my Bachelor’s Degree in Information Systems at University of Colorado, Colorado Springs, and the rest is history.
+  </p>
+  <p>
+    What I really enjoy doing most right now is listening to music. I mostly enjoy listening to hip-hop and various forms of rock/indie music. I have actually recently decided to learn to play my own music with a keyboard/ sample pad, and I am
+    really enjoying that process. I also love to play competitive video games like Super Smash Bros and Counterstrike. This summer has also been a great year for riding my dirt bike.
+  </p>
+  <p>
+    It was great sharing my story with you. If you ever want to get ahold of me, you can reach me at 719-650-6583 or email: micahlocke1@gmail.com.
+  </p>
+</div>
+  <div class="col-md-5">
+    <img class="img-fluid" src="../images/aboutMe.jpg" alt="About Me">
+  </div>
+</div>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="index.js" charset="utf-8"></script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="index.js" charset="utf-8"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+</body>
 
 </html>
