--- a/pages/myPictures.html
+++ b/pages/myPictures.html
@@ -13,8 +13,10 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link rel="stylesheet" href="../css/myPictures.css">
+    <link rel="stylesheet" href="../css/index.css">
 
-    !-- Google Fonts -->
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Scada:400i" rel="stylesheet">
 
     <!-- Font Awesome -->
