--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">What I'm Listening To Now <span class="text-muted"><br>Freddie Gibbs, Madlib - Piñata</span></h2>
-          <p class="lead">I had listened to songs from this album before, but just recently listened to the album as a whole after listening to the equally incredible album: Bandana by Freddie Gibbs and Madlib. The production pops so well and is so varied that it requires multiple listens. The lyricism and energy makes it a great listen for almost any mood.</p>
+          <h2 class="featurette-heading">What I'm Listening To Now <span class="text-muted"><br>Tyler the Creator - Igor</span></h2>
+          <p class="lead">My favorite album of the year so far, this album has been endlessly replayable for me. While the lyrics are about a sad subject, its so hard to not have fun listening to it. The variance of Trap-style bass, emotional melodies, features, and more keep me constantly coming back.</p>
         </div>
         <div class="col-md-5">
-          <img class="img-fluid" src="images/pinata.jpg" alt="Freddie Gibbs, Madlib - Piñata">
+          <img class="img-fluid" src="images/igor.jpg" alt="Tyler the Creator - Igor">
         </div>
       </div>
 
@@ -193,11 +193,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">What I'm Playing Now <span class="text-muted"><br>Call of Duty: Modern Warfare</span></h2>
-          <p class="lead">As with most millenial boys, I grew up playing the original Modern Warfare games. This game carries over much of the nostaglia and manages to change the gameplay to be much more tactical than any CoD game before. Being a fan of games like Counter Strike and Rainbow Six: Seige, this gameplay change is a welcome addition. The campaign is also beautiful with a variey of missions.</p>
+          <h2 class="featurette-heading">What I'm Playing Now <span class="text-muted"><br>Battlefield V</span></h2>
+          <p class="lead">This game plays exactly like any other Battlefield game for better or for worse. The battle royale mode, while not groundbreaking in any way, is the best looking battle royale by far and is still very fun.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img class="img-fluid" src="images/ModernWarfare.jpg" alt="Modern Warfare">
+          <img class="img-fluid" src="images/battlefield.jpg" alt="Battlefield V">
         </div>
       </div>
 
@@ -205,11 +205,23 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">What I'm Watching <span class="text-muted"><br>NFL Football</span></h2>
-          <p class="lead">While I wait for episodes of Mr. Robot season 4 and The Mandalorian to all release, the main thing that I am watching now is Football all day Sunday, and occasionally on Mondays and Thursdays. This season seems to be more wide open than any season past. As each week passes, I become less and less sure of who will win the Super Bowl.</p>
+          <h2 class="featurette-heading">What I'm Watching <span class="text-muted"><br>True Detective: Season 3</span></h2>
+          <p class="lead">No, it doesn't reach the heights of the first season, but I'm not sure any season possibly could. This season still manages to tell an engaging story of Wayne Hays through three different stages of his life.</p>
         </div>
         <div class="col-md-5">
-          <img class="img-fluid" src="images/NFL.jpg" alt="NFL">
+          <img class="img-fluid" src="images/trueDetective.jpg" alt="True Detective: Season 3">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">What I'm Watching <span class="text-muted"><br>True Detective: Season 3</span></h2>
+          <p class="lead">No, it doesn't reach the heights of the first season, but I'm not sure any season possibly could. This season still manages to tell an engaging story of Wayne Hays through three different stages of his life.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="img-fluid" src="images/Giant.png" alt="True Detective: Season 3">
         </div>
       </div>
 
